// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`create-document-type should create a document type 1`] = `
{
  "content": [
    {
      "text": "{"message":"Document type created successfully","id":"00000000-0000-0000-0000-000000000000"}",
      "type": "text",
    },
  ],
}
`;

exports[`create-document-type should create a document type 2`] = `
{
  "flags": [],
  "hasChildren": false,
  "icon": "icon-document",
  "id": "00000000-0000-0000-0000-000000000000",
  "isElement": false,
  "isFolder": false,
  "name": "_Test DocumentType Created",
  "parent": null,
}
`;

exports[`create-document-type should create a document type with parent folder 1`] = `
{
  "content": [
    {
      "text": "{"message":"Document type created successfully","id":"00000000-0000-0000-0000-000000000000"}",
      "type": "text",
    },
  ],
}
`;

exports[`create-document-type should create a document type with parent folder 2`] = `
{
  "flags": [],
  "hasChildren": false,
  "icon": "icon-document",
  "id": "00000000-0000-0000-0000-000000000000",
  "isElement": false,
  "isFolder": false,
  "name": "_Test DocumentType With Parent",
  "parent": {
    "id": "00000000-0000-0000-0000-000000000000",
  },
}
`;

exports[`create-document-type should create a document type with properties 1`] = `
{
  "content": [
    {
      "text": "{"message":"Document type created successfully","id":"00000000-0000-0000-0000-000000000000"}",
      "type": "text",
    },
  ],
}
`;

exports[`create-document-type should create a document type with properties 2`] = `
{
  "flags": [],
  "hasChildren": false,
  "icon": "icon-document",
  "id": "00000000-0000-0000-0000-000000000000",
  "isElement": false,
  "isFolder": false,
  "name": "_Test DocumentType Created",
  "parent": null,
}
`;

exports[`create-document-type should create separate groups for same group name in different tabs 1`] = `
{
  "alias": "testdocumenttypecreated",
  "allowedAsRoot": false,
  "allowedDocumentTypes": [],
  "allowedTemplates": [],
  "cleanup": {
    "keepAllVersionsNewerThanDays": null,
    "keepLatestVersionPerDayForDays": null,
    "preventCleanup": false,
  },
  "collection": null,
  "compositions": [],
  "containers": [
    {
      "id": "00000000-0000-0000-0000-000000000000",
      "name": "Tab1",
      "parent": undefined,
      "sortOrder": 0,
      "type": "Tab",
    },
    {
      "id": "00000000-0000-0000-0000-000000000000",
      "name": "Settings",
      "parent": {
        "id": "00000000-0000-0000-0000-000000000000",
      },
      "sortOrder": 0,
      "type": "Group",
    },
    {
      "id": "00000000-0000-0000-0000-000000000000",
      "name": "Tab2",
      "parent": undefined,
      "sortOrder": 1,
      "type": "Tab",
    },
    {
      "id": "00000000-0000-0000-0000-000000000000",
      "name": "Settings",
      "parent": {
        "id": "00000000-0000-0000-0000-000000000000",
      },
      "sortOrder": 1,
      "type": "Group",
    },
  ],
  "defaultTemplate": null,
  "description": null,
  "icon": "icon-document",
  "id": "00000000-0000-0000-0000-000000000000",
  "isElement": false,
  "name": "_Test DocumentType Created",
  "properties": [
    {
      "alias": "prop1",
      "appearance": {
        "labelOnTop": false,
      },
      "container": {
        "id": "00000000-0000-0000-0000-000000000000",
      },
      "dataType": {
        "id": "00000000-0000-0000-0000-000000000000",
      },
      "description": null,
      "id": "00000000-0000-0000-0000-000000000000",
      "name": "Prop1",
      "sortOrder": 0,
      "validation": {
        "mandatory": false,
        "mandatoryMessage": null,
        "regEx": null,
        "regExMessage": null,
      },
      "variesByCulture": false,
      "variesBySegment": false,
    },
    {
      "alias": "prop2",
      "appearance": {
        "labelOnTop": false,
      },
      "container": {
        "id": "00000000-0000-0000-0000-000000000000",
      },
      "dataType": {
        "id": "00000000-0000-0000-0000-000000000000",
      },
      "description": null,
      "id": "00000000-0000-0000-0000-000000000000",
      "name": "Prop2",
      "sortOrder": 1,
      "validation": {
        "mandatory": false,
        "mandatoryMessage": null,
        "regEx": null,
        "regExMessage": null,
      },
      "variesByCulture": false,
      "variesBySegment": false,
    },
  ],
  "variesByCulture": false,
  "variesBySegment": false,
}
`;

exports[`create-document-type should handle existing document type 1`] = `
{
  "content": [
    {
      "text": "{"message":"Failed to create document type","status":400,"error":{"type":"Error","title":"Duplicate alias","status":400,"detail":"The specified document type alias is already in use","operationStatus":"DuplicateAlias"}}",
      "type": "text",
    },
  ],
  "isError": true,
}
`;
